# Pompe-Recettes

./: .gitignore  README.md  SUPPORTED_SITES.md  pyproject.toml
.cache/pompe-recettes/: crawl-progress.json
config/: project.toml.sample
src/pompe_recettes/: __init__.py  cli.py  crawl_progress.py  fetcher.py  localize.py  markdown.py  models.py  project_config.py  site_overrides.py
src/pompe_recettes/notion_export/: __init__.py  client.py  config.py  types.py
